# softki_gp_kit

./: README.md  config.yaml  download_data.sh  pyproject.toml  run.py
data/: get_md22.py  get_uci.py
data/synthetic/: synthetic.py  synthetic_functions.py  visualize.ipynb
gp/: util.py
gp/ddsvgp/: DirectionalGradVariationalStrategy.py  RBFKernelDirectionalGrad.py  config.yaml  model.py  train.py
gp/dexact_gp/: config.yaml  model.py  train.py
gp/dsoft_ki/: config.yaml  mll.py  model.py  train.py
gp/dsvgp/: GradVariationalStrategy.py  config.yaml  model.py  train.py
gp/sgpr/: config.yaml  model.py  train.py
gp/softki/: config.yaml  mll.py  model.py  train.py
gp/svgp/: config.yaml  model.py  train.py
linear_solver/: cg.py  preconditioner.py
